# shepherds_quest

./: .gitignore  Cargo.toml  README.md  build_web.sh  run.sh  watch_web.sh
assets/levels/: 1.level.ron  2.level.ron  3.level.ron  4.level.ron  custom_test.level.ron  first.level.ron  fourth.level.ron  second.level.ron  third.level.ron
assets/models/: llama.glb  models.blend  models.blend1  models.glb  pug.glb  sheep.glb  tree.glb  ufo.glb
assets/res/: sheep.behavior.ron
assets/shaders/: liquid.wgsl  puls.wgsl  telegraph.wgsl
assets/sprites/: alien.aseprite  credits.png~  gras.aseprite  henk.aseprite  lava.aseprite  sheperd.aseprite  static.aseprite  ui.aseprite
src/: camera.rs  controls.rs  credits.rs  debug.rs  game_start.rs  goal.rs  liquid.rs  main.rs  menu.rs  mod.rs  puls_material.rs  ron_loader.rs  settings.rs  state.rs  trap.rs  ui.rs  util.rs
src/animals/: animations.rs  dog.rs  llama.rs  mod.rs  physics.rs  sheep.rs  telegraph.rs
src/gameplay/: game_start.rs  goal.rs  level.rs  mod.rs  trap.rs  ui.rs
src/level/: builder.rs  loader.rs  mod.rs  progress.rs  transistion.rs
